--- a/views/bao.ejs
+++ b/views/bao.ejs
@@ -192,7 +192,7 @@
                 <div class="row g-4">
                     <div class="col-lg-8">
                         <div class="mb-4">
-                            <a href="#" class="h1 text-white display-5"><%= topic.topic %></a>
+                            <a href="/<%= topic.category %>/<%= topic._id %>" class="h1 text-white display-5"><%= topic.topic %></a>
                         </div>
                         <div class="position-relative rounded overflow-hidden mb-3">
                             <img src="<%= topic.banner %>" class="img-zoomin img-fluid rounded w-100" alt="">
@@ -213,18 +213,18 @@
                             </div>
                         </div>
                         <div class="d-flex justify-content-between">
-                            <a href="#" class="text-white link-hover me-3"><i class="fa fa-clock"></i><%= topic.time %></a>
-                            <a href="#" class="text-white link-hover me-3"><i class="fa fa-eye"></i>
+                            <a class="text-white link-hover me-3"><i class="fa fa-clock"></i><%= topic.time %></a>
+                            <a class="text-white link-hover me-3"><i class="fa fa-eye"></i>
                                 <% if(topic.view > 999) {%>
                                     <%= topic.view / 1000 %>k Views
                                 <% } else {%>
                                     <%= topic.view %> Views
                                 <% } %>
                             </a>
-                            <a href="#" class="text-white link-hover me-3"><i class="fa fa-comment-dots"></i>
+                            <a class="text-white link-hover me-3"><i class="fa fa-comment-dots"></i>
                                 <%= topic.comment %> Comments
                             </a>
-                            <a href="#" class="text-white link-hover"><i class="fa fa-arrow-up"></i>
+                            <a class="text-white link-hover"><i class="fa fa-arrow-up"></i>
                                 <% if(topic.share > 999) {%>
                                     <%= topic.share / 1000 %>k Share
                                 <% } else {%>
