--- a/views/bao.ejs
+++ b/views/bao.ejs
@@ -354,7 +354,7 @@
                                     <h4 class="my-4 text-white">KẾT NỐI MẠNG XÃ HỘI</h4>
                                     <div class="row g-4">
                                         <div class="col-12">
-                                            <a href="" target="_blank"
+                                            <a href="https://www.facebook.com/blockchainvietnam.vn" target="_blank"
                                                 class="w-100 rounded btn btn-primary d-flex align-items-center p-3 mb-2">
                                                 <img class="fab fa-twitter btn btn-light btn-square rounded-circle me-3"
                                                     src="/img/icon/gra2f (1).png" />
