--- a/views/account.ejs
+++ b/views/account.ejs
@@ -445,14 +445,14 @@
                     <div class="row g-3">
                         <div class="col-md-6">
                             <div class="form-floating">
-                                <input type="text" class="form-control" id="name" placeholder="Họ Và Tên của Bạn">
-                                <label for="name">Họ Và Tên của Bạn</label>
+                                <input type="text" class="form-control" id="nameT" placeholder="Họ Và Tên của Bạn" name="nameT">
+                                <label for="nameT">Họ Và Tên của Bạn</label>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-floating">
-                                <input type="email" class="form-control" id="email" placeholder="Email của Bạn">
-                                <label for="email">Email của Bạn</label>
+                                <input type="email" class="form-control" id="email" placeholder="Email của Bạn" name="emailT">
+                                <label for="emailT">Email của Bạn</label>
                             </div>
                         </div>
                         <div class="col-12">
@@ -591,10 +591,8 @@
                                 <p>Đừng quên theo dõi những bài viết mới của chúng tôi, gửi email tại đây.</p>
                             </div>
                             <div class="subscribe-form">
-                                <form action="#">
-                                    <input type="text" placeholder="Địa Chỉ Email . . .">
-                                    <button><i class="fab fa-telegram-plane"></i></button>
-                                </form>
+                                  <input type="text" placeholder="Địa Chỉ Email . . ." id="dcEmail">
+                                  <button><i class="fab fa-telegram-plane"></i></button>
                             </div>
                         </div>
 
